# Ogonek

./: .gitignore  README.md  compose.build.yaml  compose.buildx.yaml  compose.deploy.yaml  compose.dev.mac.yaml  compose.dev.yaml  compose.prod.yaml  compose.staging.yaml  dev.sh  migrations.txt  package.json  privatekey.pem  test-and-format.sh
axum/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.dev  input.md  key.ps  mdconfig.css  migrations.txt  openapi.json  output.html  rustfmt.toml  tarpaulin-report.html
axum/.sqlx/: query-0051bb73bc86826be95bcc035b56684f9d770bdd0c5cbd9c3dd6f0a4c8129b54.json  query-00984e5368a5a8d24a94df81b19722fdb1b53156f9afa05673b48c4b81b48fcb.json  query-0150c823d320433fe0b579f30cbe59d071f4bf9d99bed3c62cf8a005311a5cb1.json  query-01bd3e9aea5f8b62bbd88d90dd6cb46454677b0eb8f3ee0acd3c078ccced5e89.json  query-05c9e7642cd71db7684c7375d412615e4dc0941c6df4e8280f37273c0cd5d035.json  query-0a9ed13fd2d07d8edf9bbe50bed592421de1ec9701c3a31a4ac8419a3d3bdd23.json  query-0afc3c902aac190dfbb92ba64ac94c24c92d78a4df62a16db09e0fe2ebba2729.json  query-0ee03d7e6e02264aa2fe72e641cccd14ad99b2832155ffb2d80010e99f7aede6.json  query-1008af70904f0e55e1056fb08b8c954ce52d02183624a29dcde39db3e1c28efe.json  query-129a9a3cd2cdf74289b2dfc3148691d77266bfabcb93f030b5fa817a59c9f195.json  query-13716339e266f86b40cc63be9d952b9425a1748bfd94cd7170abd50dc3ecc740.json  query-139d8d398be024cdd04266a3b33076a0d41fbbb0830404702e8f91ebad2c18fb.json  query-13a34f64b2664511df63c5b30b1af38b6f323a574f802d8becf1c122d54c4374.json  query-14ad84739df4f2561815a6b20ff6af117969f1cb891bf417fd30034ea56e76a8.json  query-16e8f035b8d6f3dacb327441b67bb44724607fa59abc36f57c101b5a8f0d99ad.json  query-17e58743f6723f4b58dcaa83ad29c204e736f1c0d9b5a0390f8a213a30449884.json  query-19fa3863606815a28cfbf7e364641327bebe6605a47cefb263d40bd8ef760c32.json  query-1bcf168839c20bfb0dedf2ec47c5b321672c940ba389a5eacf0a5afffcba592e.json  query-1ce3cad95ddd28c5d73d847471cae3085f4e5780a927347a609d165e96f40d27.json  query-1d635be5ce0213cf663538b32db040f28a7e50ef56bd79ce262339d83b19c1a7.json  query-1dbb5769f1340c9cfbcc63293af57d7ba6eaeaa308e3f4fa8ffc6d97ed18334b.json  query-1defbfd3583f6b9592e8a7fba1282a608ce0a2bad8b4314435941d3791255cbc.json  query-1e0d44533881c1cbca83660afaa7a2b7fbe41c2a4bc6fe56622f274f721bdba7.json  query-1e339e959f8d2cdac13b3e2b452d2f718c0fd6cf6202d5c9139fb1afda123d29.json  query-1e7baeb3e9caa769965ff3fd46929367a2c012e25057b1f481f8d1592c521504.json  query-1f0fdad03f8c19b06b0d4e74d063040bb288a99b60d7e8d31389986b9282be04.json  query-1f9557e427b577b536e8b8eaa0022a67f54d2552ccf4cd299c568e05c4c32c5b.json  query-21b3f532b2dc0270552f80eb71b8191bcc1381e9509185a097658995d8e5ff5c.json  query-21ff4dd327d63f9b2adc55bbbdd1d43fab9457571bb3ecb07c3ec840799d320f.json  query-22f822dd7cb0a07af9f9fd66e009582060457d3de045dabbf55a6d80af4e4c8d.json  query-237a677d9f185c1ff5a2014cf47c48b669d1aa418df8a70d36f0c31d715c7446.json  query-2442e6b9f56fad0c22c938a54d3c67e00916df167b7cdbc16dd5ad7482df3a35.json  query-25652815ba0bf0a0ebe1d7d13bf92c012fc9e6c01e7d1f8ed3286d40ba4eeaec.json  query-26bc1364c196311553f5b75e7228d342ec3e66a147bc878504535288135bb6f4.json  query-299adb1636abdb922cf8bd407b6f0eeb2b56abd704169ef3f27da30097e3bb2a.json  query-2b0d759c95053c551262f78139d5cc3a10c393e7e5ebd6bebd5bd55a5570a4fc.json  query-2b1bf8b9dec1d46518913d24c60f328ba43481be034cef8549b874b4e433fa89.json  query-2b99b17adab37db1d858be91b2210d38b97e5db8039689d4e25825dc11947a86.json  query-2c05b02f9c6c69a50187b3334d9ba932a563935b512d941d686517feb887143c.json  query-2c942cd41213f2520d5292782127d2375d78ad6a837ce3c5a9f8d4357d4da4e1.json  (+213 more)
axum/crates/ogonek-aws/: Cargo.toml
axum/crates/ogonek-db/: Cargo.toml
axum/crates/ogonek-notifications/: Cargo.toml
axum/crates/ogonek-s3/: Cargo.toml
axum/crates/ogonek-types/: Cargo.toml
axum/migrations/: 0007_add_zoom.sql  0008_profile_create.sql  0009_fix_profile_user_signup.sql  01_user.sql  02_profile.sql  03_lessons.sql  04_tasks.sql  05_teacher_notes.sql  05_teacher_student.sql  06_student_notes.sql  08_visibility_assig.sql  09_pagination.sql  10_subscription.sql  11_files.sql  13_file-pending.sql  15_profile-tg.sql  16_zoom_to_video.sql  20250104173125_non-null-users.sql  20250107141436_option_due.sql  20250107172625_student_notes.sql  20250107193651_notes_constraints.sql  20250108102019_teacher_student.sql  20_apn.sql  21_deck_name.sql  22_media_url_lesson.sql  23_content-block.sql  25_calendar.sql
axum/ogonek-cli/: Cargo.toml
axum/ogonek-cli/src/: create_god.rs  generate_types.rs  hash_generator.rs  main.rs  seed_db.rs
axum/ogonek-server/: Cargo.toml
axum/ogonek-server/src/: error.rs  lib.rs  main.rs
axum/src/: error.rs  lib.rs  main.rs  schema.rs
axum/src/api/: auth.rs  decks.rs  error.rs  file.rs  learning.rs  lesson.rs  middleware.rs  mod.rs  multipart.rs  notes.rs  openapi.rs  profile.rs  student.rs  task.rs  user.rs
axum/src/app/: mod.rs  server.rs
axum/src/auth/: claims.rs  error.rs  helpers.rs  jwt.rs  mod.rs  password.rs  tokens.rs
axum/src/db/: error.rs  helpers.rs  init.rs  mod.rs
axum/src/models/: cards.rs  cards_decks.rs  files.rs  flashcards.rs  lessons.rs  meta.rs  mod.rs  notifications.rs  preferences.rs  profiles.rs  s3.rs  students.rs  tasks.rs  tracking.rs  users.rs
axum/src/notifications/: apns.rs  messages.rs  mod.rs  telegram.rs
axum/src/openapi/: admin.rs  calendar.rs  content.rs  mod.rs
axum/src/s3/: fetch.rs  init.rs  mod.rs  multipart.rs  post.rs
axum/src/services/: error.rs  mod.rs  schema.rs
axum/src/tests/: common.rs  integration.rs  mod.rs
axum/src/tools/: logging.rs  (+2 more)
axum/tests/: common.rs  integration.rs
rust/: Cargo.toml  diesel.toml  log4rs.yaml
rust/migrations/: 20250104164140_create-users.sql  20250105194836_add_lessons.sql  20250105205530_change_time_lesson.sql  20250107134455_add_task.sql  20250107164814_bookmark.sql  20250107165043_bookmark_name.sql  20250107171041_remove_bookmark.sql
rust/src/: keys.rs  lib.rs  main.rs  models.rs  schema.rs
upload-service/: Cargo.toml  Dockerfile  Dockerfile.dev
upload-service/src/: main.rs
(+1613 files in other folders)
