[package]
name = "ogonek"
version = "1.11.0"
edition = "2024"


[dependencies]
# Primary Crates
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "uuid",
    "migrate",
    "derive",
    "chrono", 
    "ipnetwork"
    ] }
tokio = { version = "1.47", features = ["full"] }

# Secondary Crates
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
argon2 = "0.5.3"

# Auxiliary Crates
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6.6", features = ["full"] }
anyhow = "1.0.99"
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = "0.15"
nanoid = "0.4.0"
base64 = "0.22.1"
aws-sdk-s3 = "1.105.0"
aws-credential-types = "1.2.6"
aws-config = "1.8.6"
sentry = {version ="0.41", features = ["tracing"]}
atty = "0.2.14"
sentry-tower = {version = "0.38.1", features = ["axum", "axum-matched-path", "http"]}
utoipa = {version ="5.4.0", features = ["chrono"]}
utoipa-axum = {version ="0.2.0"}
serde_yaml = "0.9.34"
reqwest = "0.12.23"
a2 = "0.10.0"
rpassword = "7.4.0"
tower = "0.5.2"
http-body-util = "0.1.3"
fake = "4.4.0"
regex = "1.11.2"
chrono-tz = "0.10.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
