[workspace]
resolver = '3'
members = [
    "crates/*",
    "ogonek-server",
    "ogonek-cli",
]

[workspace.dependencies]
# Primary Crates
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
    "derive",
    "chrono", 
    "ipnetwork"
    ] }
# Web Framework
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }

# Time & Date
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"

# API Documentation
utoipa = { version = "5.4.0", features = ["chrono"] }
utoipa-axum = { version = "0.2.0" }

# Auxiliary Crates
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0.99"
dotenvy = "0.15"
nanoid = "0.4.0"
sentry = {version ="0.41", features = ["tracing"]}
sentry-tower = {version = "0.38.1", features = ["axum", "axum-matched-path", "http"]}

reqwest = { version = "0.12.23", features = ["multipart"] }
http-body-util = "0.1.3"
fake = "4.4.0"
regex = "1.11.2"
urlencoding = "2.1.3"
comrak = "0.42.0"
bytes = "1.10.1"
tokio-util = "0.7.16"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
