[workspace]
resolver = '3'
members = [
    "crates/*",
    "ogonek-server",
    "ogonek-cli",
]

[workspace.dependencies]
# Primary Crates
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [
    "derive",
    "chrono", 
    "ipnetwork"
    ] }
# Web Framework
axum = { version = "0.8.4", features = ["macros", "multipart"] }
validator = { version = "0.20.0", features = ["derive"] }
# Time & Date
chrono = { version = "0.4", features = ["serde"] }

# API Documentation
utoipa = { version = "5.4.0", features = ["chrono"] }

# Auxiliary Crates
thiserror = "2.0.16"
tracing = "0.1"
anyhow = "1.0.99"
dotenvy = "0.15"
nanoid = "0.4.0"

reqwest = { version = "0.12.23", features = ["multipart", "json"] }
fake = "4.4.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
