

[package]
name = "rust"
version = "0.1.0"
edition = "2021"


[dependencies]
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8.10"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
ulid = '1.1.3'
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3.0" 
serde_json = "1.0"
log4rs = '1.3.0'
log = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7.9"
hyper = "1.5.2"
sqlx = "0.8.2"
thiserror = "2.0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = "0.6.2"
axum-extra = {version = "0.9.6", features = ["typed-header"] }
async-trait = "0.1.83"
surrealdb = "2.1.4"
faker_rand = "0.1.1"
rand = "0.8.5"