

[package]
name = "rust"
version = "0.1.0"
edition = "2021"


[dependencies]
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8.10"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
ulid = '1.1.3'
serde = { version = "1", features = ["derive"] }
jsonwebtoken = {version= "9.3.0", features =["use_pem"]}
serde_json = "1.0"
log4rs = '1.3.0'
log = "0.4"
tokio = { version = "1", features = ["full"] }
axum = {version = "0.7.9", features = ["macros"]}
hyper = "1.5.2"
sqlx = "0.8.2"
thiserror = "2.0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = "0.6.2"
axum-extra = {version = "0.9.6", features = ["typed-header"] }
async-trait = "0.1.83"
surrealdb = {version = "2.1.4", features= ['protocol-http']}
argon2 = "0.5.3"
base64 = "0.22.1"
