[package]
name = "rust"
version = "0.1.0"
edition = "2021"


[dependencies]
# Primary Crates
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "time",
    "uuid",
] }
tokio = { version = "1", features = ["full"] }

# Secondary Crates
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.0.0", features = ["time_0_3"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
log = "0.4"
r2d2 = "0.8.10"
uuid = { version = "1.11.0", features = ["serde", "v4", "v7"] }
hyper = "1.5.2"
argon2 = "0.5.3"


# Auxiliary Crates
thiserror = "2.0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["full"] }
anyhow = "1.0.95"
validator = { version = "0.19.0", features = ["derive"] }
dotenvy = "0.15"
once_cell = "1.20.2"
regex = "1.11.1"
nanoid = "0.4.0"
time = "0.3.37"
tower = { version = "0.5.2", features = ["full"] }
tower-cookies = "0.11.0"
