[package]
name = "upload-service"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = {version = "0.8.2", features = ["multipart"]}
dotenvy = "0.15.7"
serde = {version="1.0.217", features = ["derive"]}
thiserror = "2.0.11"
tokio = {version="1.43.0", features = ["full"]}
tower-http = {version="0.6.2", features=["cors"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
