[package]
name = "upload-service"
version = "1.0.0"
edition = "2021"

[dependencies]
uuid = { version = "1.12.1", features = ["v4"] }
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["multipart"] }
dotenvy = "0.15.7"
mime_guess = "2.0.5"
sanitize-filename = "0.6.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = {version="0.5.2", features= ["timeout"]}
