[package]
name = "ogonek_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow.workspace = true
tokio = { version = "1.0", features = ["full"] }
rpassword = "7.0"
serde_json.workspace = true
serde_yaml = "0.9"
dotenvy.workspace = true
fake.workspace = true
chrono.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
nanoid.workspace = true
argon2 = "0.5"
utoipa.workspace = true
ogonek_db = { path = "../crates/ogonek-db" }
ogonek_types = { path = "../crates/ogonek-types" }
ogonek_server = { path = "../ogonek-server" }
