[package]
name = "ogonek_server"
version = "1.12.0"
edition = "2024"

[dependencies]
# Internal crates
ogonek_db = { path = "../crates/ogonek-db" }
ogonek_s3 = { path = "../crates/ogonek-s3" }
ogonek_types = { path = "../crates/ogonek-types" }
ogonek_notifications = { path = "../crates/ogonek-notifications" }

# Workspace dependencies
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

base64 = "0.22.1"
serde_yaml = "0.9.34"
rpassword = "7.4.0"
argon2 = "0.5.3"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
atty = "0.2.14"