[package]
name = "ogonek_server"
version = "1.13.0"
edition = "2024"

[dependencies]
# Internal crates
ogonek_db = { path = "../crates/ogonek-db" }
ogonek_s3 = { path = "../crates/ogonek-s3" }
ogonek_types = { path = "../crates/ogonek-types" }
ogonek_notifications = { path = "../crates/ogonek-notifications" }

tracing.workspace = true
serde_json.workspace = true
chrono.workspace = true
serde.workspace = true
validator.workspace = true
thiserror.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { workspace = true }
axum = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }
anyhow.workspace = true
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
dotenvy.workspace = true
sqlx.workspace = true
nanoid.workspace = true
reqwest.workspace= true
comrak = "0.42.0"
bytes = "1.10.1"
urlencoding = "2.1.3"
sentry = {version ="0.41", features = ["tracing"]}
sentry-tower = {version = "0.38.1", features = ["axum", "axum-matched-path", "http"]}
tokio = { version = "1.47", features = ["full"] }

base64 = "0.22.1"
rpassword = "7.4.0"
argon2 = "0.5.3"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
atty = "0.2.14"
