[package]
name = "ogonek_aws"
version = "1.1.0"
edition = "2024"

[dependencies]
ogonek_types = { path = "../ogonek-types" }
aws-sdk-s3 = "1.105.0"
aws-credential-types = "1.2.6"
aws-config = "1.8.6"

anyhow.workspace = true
tracing.workspace = true
axum.workspace = true
thiserror.workspace = true
aws-sdk-ses = "1.89.0"
aws-sdk-sesv2 = "1.100.0"
tera = "1.20.0"
once_cell = "1.21.3"
